<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="un_jugador">1 Player</string>
    <string name="dos_jugadores">2 Players</string>
    <string name="facil">Easy</string>
    <string name="normal">Normal</string>
    <string name="dificil">Legend</string>
    <string name="casilla">Tile</string>
    <string name="circulos_rojos_ganan">Red Circles WIN!!</string>
    <string name="circulos_azules_ganan">Blue Circles WIN!!</string>
    <string name="empate">Tie..</string>
</resources>
