<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

        <TextView
           style="@style/titulo"
            android:text="@string/app_name"
            />

        <Button
            android:id="@+id/unjug"
            android:text="@string/un_jugador"
            style="@style/boton"
            />

        <RadioGroup

            android:id="@+id/configD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/facil"
                style="@style/radio"
                android:text="@string/facil" />

            <RadioButton
                android:id="@+id/nomal"
                style="@style/radio"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/leyenda"
                style="@style/radio"
                android:text="@string/dificil" />
        </RadioGroup>





        <Button
            android:id="@+id/dosjug"
            android:text="@string/dos_jugadores"
            style="@style/boton"
            />

    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3">

        <ImageView
            android:id="@+id/a1"
            style="@style/casillas"
            />
        <ImageView
            android:id="@+id/a2"
            style="@style/casillas"
            />
        <ImageView
            android:id="@+id/a3"
            android:src="@drawable/circulo_verde"
            style="@style/casillas"
            />
        <ImageView
            android:id="@+id/b1"
            style="@style/casillas"
            />
        <ImageView
            android:id="@+id/b2"
            android:src="@drawable/circulo_verde"
            style="@style/casillas"
            />
        <ImageView
            android:id="@+id/b3"
            android:src="@drawable/circulo"
            style="@style/casillas"
            />
        <ImageView
            android:id="@+id/c1"
            android:src="@drawable/circulo_verde"
            style="@style/casillas"
            />
        <ImageView
            android:id="@+id/c2"
            android:src="@drawable/circulo"
            style="@style/casillas"
            />
        <ImageView
            android:id="@+id/c3"
            android:src="@drawable/circulo"
            style="@style/casillas"
            />


    </GridLayout>

</LinearLayout>